Workaround for Q_GLOBAL_STATIC vs K_GLOBAL_STATIC cleanup race.

QTBUG-22667
BUG: 285962